--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "json-bigint": "^1.0.0",
     "json-stringify-safe": "^5.0.0",
     "module-details-from-path": "^1.0.3",
+    "object-sizeof": "^2.6.5",
     "readable-stream": "^3.6.1",
     "require-in-the-middle": "^7.4.0",
     "semver": "^7.5.2",
