--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
   },
   "dependencies": {
     "@apm-js-collab/tracing-hooks": "^0.3.1",
+    "@datadog/pprof": "^5.11.1",
     "@grpc/grpc-js": "^1.13.2",
     "@grpc/proto-loader": "^0.7.5",
     "@newrelic/security-agent": "^3.0.0",
